src/generate/snapshots/nixify__generate__tests__python_poetry_flake_parts.snap
---
source: src/generate/mod.rs
expression: result.content
---
{
  description = "A sample Python application";

  inputs = {
    nixpkgs.url = "github:NixOS/nixpkgs/nixpkgs-unstable";
    flake-parts.url = "github:hercules-ci/flake-parts";
    poetry2nix.url = "github:nix-community/poetry2nix";
    
  };

  outputs = inputs@{ self, nixpkgs, flake-parts, poetry2nix,  }:
    flake-parts.lib.mkFlake { inherit inputs; } {
      systems = [ "x86_64-linux" "aarch64-linux" "x86_64-darwin" "aarch64-darwin" ];

      perSystem = { pkgs, system, ... }:
        let
          poetry2nix = poetry2nix.lib.mkPoetry2Nix { inherit pkgs; };
          pythonApp = poetry2nix.mkPoetryApplication {
          projectDir = ./.;
        };
          
        in
        {
          checks = {
            python-lint = pkgs.runCommand "python-lint" {
            nativeBuildInputs = [ pkgs.ruff ];
          } ''
            cd ${./.}
            ruff check .
            touch $out
          '';

          python-typecheck = pkgs.runCommand "python-typecheck" {
            nativeBuildInputs = [ pkgs.mypy ];
          } ''
            cd ${./.}
            mypy .
            touch $out
          '';
            
          };

          packages.default = pythonApp;

          devShells.default = pkgs.mkShell {
            packages = with pkgs; [
              python3
            poetry
            ruff
            mypy
              
            ];

            inputsFrom = [ pythonApp ];

          };
        };
    };
}
