src/generate/snapshots/nixify__generate__tests__python_requirements_only_standalone.snap
---
source: src/generate/mod.rs
expression: result.content
---
{
  description = "A sample Python application";

  inputs = {
    nixpkgs.url = "github:NixOS/nixpkgs/nixpkgs-unstable";
    flake-utils.url = "github:numtide/flake-utils";
    
  };

  outputs = { self, nixpkgs, flake-utils,  }:
    flake-utils.lib.eachDefaultSystem (system:
      let
        pkgs = nixpkgs.legacyPackages.${system};
        
      in
      {
        checks = {
          python-lint = pkgs.runCommand "python-lint" {
            nativeBuildInputs = [ pkgs.ruff ];
          } ''
            cd ${./.}
            ruff check .
            touch $out
          '';

          python-typecheck = pkgs.runCommand "python-typecheck" {
            nativeBuildInputs = [ pkgs.mypy ];
          } ''
            cd ${./.}
            mypy .
            touch $out
          '';
          
        };

        packages.default = null;

        devShells.default = pkgs.mkShell {
          packages = with pkgs; [
            python3
            python3Packages.pip
            ruff
            mypy
            
          ];

          inputsFrom = [  ];

        };
      });
}
